# todocli

./: Cargo.toml  README.md  TODO.md
src/: main.rs  todoman.rs  utils.rs
src/utils/: configuration.rs  fileman.rs  functions.rs  manage_todos.rs
