[package]
name = "todocli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.30", features = ["derive"] }
colored = "2.0.0"
dirs = "4.0.0"
prettytable-rs = "0.10.0"
yaml-rust = "0.4.5"
